--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <head>
-  <title>Anna Dowlin</title>
+  <title>Denise Britt</title>
   <style>
     body {
       text-align: center;
